fixed styling for andriod, looked too dark

--- a/app/css/game.css
+++ b/app/css/game.css
@@ -9,7 +9,7 @@ body{
     overflow: hidden;
     margin: 0;
     padding: 0;
-    background-color: rgb(34, 34, 34);
+    background-color: rgb(75, 75, 75);
     transition: background-color 0.4s;
 }
 
@@ -55,6 +55,11 @@ body div{
     line-height: 2em;
     font-family: helvetica;
     font-size: 2em;
+    transition: background-color 200ms;
+}
+
+.start:active{
+    background-color: rgb(67, 67, 67);
 }
 
 .reset{
@@ -66,6 +71,11 @@ body div{
     line-height: 2em;
     font-family: helvetica;
     font-size: 2em;
+    transition: background-color 200ms;
+}
+
+.reset:active{
+    background-color: rgb(154, 154, 154);
 }
 
 .score{
